--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,11 +33,11 @@ jobs:
 
                 run: |
                     docker build -f Dockerfile.backend --build-arg KAFKA_BROKER_HOST=$KAFKA_BROKER_HOST \
-                    -t ghcr.io/Pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7) .
+                    -t ghcr.io/pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7) .
 
             -   name: Push image to GitHub Container Registry
                 run: |
-                      docker push ghcr.io/Pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7)
+                      docker push ghcr.io/pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7)
               
 
     # gitops_develop:
@@ -48,16 +48,16 @@ jobs:
     #     -   name: Clone GitOps repository
     #         uses: actions/checkout@v3
     #         with:
-    #             repository: Pelema/dev_ops
+    #             repository: pelema/dev_ops
     #             token: ${{ secrets.PAT }}
     #             ref: pdqa
         
     #     -   name: Kustomize CBI-develop
-    #         if: github.repository == 'Pelema/lasta-hub'
+    #         if: github.repository == 'pelema/lasta-hub'
     #         run: |
     #             cd lasta-hub/overlays/develop
     #             SHA=$(echo ${{needs.build_develop.outputs.output1}} | head -c7)
-    #             kustomize edit set image ghcr.io/Pelema/lasta-hub:$SHA
+    #             kustomize edit set image ghcr.io/pelema/lasta-hub:$SHA
     #             git config user.name GitOps pdqa
     #             git config user.email gitops@pdqa.com
     #             git add .
