--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,6 +19,7 @@ jobs:
         steps:
             # name: Checkout feature/codebase-combine
             # uses: actions/checkout@v4
+            - run: cat pwd
 
             -   name: Log in to GitHub Container Registry
                 uses: docker/login-action@v2
@@ -32,7 +33,7 @@ jobs:
                     KAFKA_BROKER_HOST: ${{ vars.KAFKA_BROKER_HOST }}
 
                 run: |
-                    docker build -f Dockerfile.backend --build-arg KAFKA_BROKER_HOST=$KAFKA_BROKER_HOST \
+                    docker build -f ./Dockerfile.backend --build-arg KAFKA_BROKER_HOST=$KAFKA_BROKER_HOST \
                     -t ghcr.io/pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7) .
 
             -   name: Push image to GitHub Container Registry
