--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,11 +16,16 @@ jobs:
         if: github.ref == 'refs/heads/feature/codebase-combine'
         environment: develop
         runs-on: ubuntu-latest
+        outputs:
+          output1: ${{ steps.step1.outputs.sha }}
         steps:
             - name: Checkout feature/codebase-combine
               uses: actions/checkout@v4
 
-            - run: ls -la
+            - id: step1
+              run: |
+                echo "::set-output name=sha::$(echo $GITHUB_SHA)"
+                echo $GITHUB_SHA > $GITHUB_WORKSPACE/_meta 
 
             -   name: Log in to GitHub Container Registry
                 uses: docker/login-action@v2
@@ -41,30 +46,29 @@ jobs:
                 run: |
                       docker push ghcr.io/pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7)
               
-
-    # gitops_develop:
-    #     needs: build_develop
-    #     if: github.ref == 'refs/heads/feature/codebase-combine'
-    #     runs-on: ubuntu-latest
-    #     steps:
-    #     -   name: Clone GitOps repository
-    #         uses: actions/checkout@v3
-    #         with:
-    #             repository: pelema/dev_ops
-    #             token: ${{ secrets.PAT }}
-    #             ref: pdqa
+    gitops_develop:
+        needs: build_develop
+        if: github.ref == 'refs/heads/feature/codebase-combine'
+        runs-on: ubuntu-latest
+        steps:
+        -   name: Clone GitOps repository
+            uses: actions/checkout@v3
+            with:
+                repository: pelema/dev-ops
+                token: ${{ secrets.PAT }}
+                ref: master
         
-    #     -   name: Kustomize CBI-develop
-    #         if: github.repository == 'pelema/lasta-hub'
-    #         run: |
-    #             cd lasta-hub/overlays/develop
-    #             SHA=$(echo ${{needs.build_develop.outputs.output1}} | head -c7)
-    #             kustomize edit set image ghcr.io/pelema/lasta-hub:$SHA
-    #             git config user.name GitOps pdqa
-    #             git config user.email gitops@pdqa.com
-    #             git add .
-    #             git commit -m "version-$SHA"
-    #             git push 
+        -   name: Kustomize CBI-develop
+            if: github.repository == 'pelema/lasta-hub'
+            run: |
+                cd lasta-hub/overlays/develop
+                SHA=$(echo ${{needs.build_develop.outputs.output1}} | head -c7)
+                kustomize edit set image ghcr.io/pelema/lasta-hub:$SHA
+                git config user.name github-actions[bot]
+                git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+                git add .
+                git commit -m "version-$SHA"
+                git push 
 
     # develop-deploy:
     #     needs: gitops_develop
