--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,11 +40,11 @@ jobs:
 
                 run: |
                     docker build -f ./Dockerfile.backend --build-arg KAFKA_BROKER_HOST=$KAFKA_BROKER_HOST \
-                    -t ghcr.io/pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7) .
+                    -t ghcr.io/pelema/lasta-hub:backend-$(echo $GITHUB_SHA | head -c7) .
 
             -   name: Push image to GitHub Container Registry
                 run: |
-                      docker push ghcr.io/pelema/lasta-hub:$(echo $GITHUB_SHA | head -c7)
+                      docker push ghcr.io/pelema/lasta-hub:backend-$(echo $GITHUB_SHA | head -c7)
               
     gitops_develop:
         needs: build_develop
@@ -63,7 +63,7 @@ jobs:
             run: |
                 cd lasta-hub/overlays/develop
                 SHA=$(echo ${{needs.build_develop.outputs.output1}} | head -c7)
-                kustomize edit set image ghcr.io/pelema/lasta-hub:$SHA
+                kustomize edit set image ghcr.io/pelema/lasta-hub:backend-$SHA
                 git config user.name github-actions[bot]
                 git config user.email 41898282+github-actions[bot]@users.noreply.github.com
                 git add .
