--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,7 +61,7 @@ jobs:
         -   name: Kustomize CBI-develop
             if: github.repository == 'pelema/lasta-hub'
             run: |
-                cd lasta-hub/overlays/develop
+                cd overlays/develop
                 SHA=$(echo ${{needs.build_develop.outputs.output1}} | head -c7)
                 kustomize edit set image ghcr.io/pelema/lasta-hub:backend-$SHA
                 git config user.name github-actions[bot]
