--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs: 
     build_develop:
-        name: Build and Push
+        name: Build and Push Docker Image
         if: github.ref == 'refs/heads/feature/codebase-combine'
         environment: develop
         runs-on: ubuntu-latest
@@ -40,13 +40,14 @@ jobs:
 
                 run: |
                     docker build -f ./Dockerfile.backend --build-arg KAFKA_BROKER_HOST=$KAFKA_BROKER_HOST \
-                    -t ghcr.io/pelema/lasta-hub:backend-$(echo $GITHUB_SHA | head -c7) .
+                    -t ghcr.io/pelema/pdqa-backend:$(echo $GITHUB_SHA | head -c7) .
 
             -   name: Push image to GitHub Container Registry
                 run: |
-                      docker push ghcr.io/pelema/lasta-hub:backend-$(echo $GITHUB_SHA | head -c7)
+                      docker push ghcr.io/pelema/pdqa-backend:$(echo $GITHUB_SHA | head -c7)
               
     gitops_develop:
+        name: Update GitOps Image Tag
         needs: build_develop
         if: github.ref == 'refs/heads/feature/codebase-combine'
         runs-on: ubuntu-latest
@@ -63,7 +64,7 @@ jobs:
             run: |
                 cd overlays/develop
                 SHA=$(echo ${{needs.build_develop.outputs.output1}} | head -c7)
-                kustomize edit set image ghcr.io/pelema/lasta-hub:backend-$SHA
+                kustomize edit set image ghcr.io/pelema/pdqa-backend:$SHA
                 git config user.name github-actions[bot]
                 git config user.email 41898282+github-actions[bot]@users.noreply.github.com
                 git add .
