--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:app": "node dist/app/server/server.mjs"
+    "serve:ssr:app": "node dist/client/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -26,21 +26,14 @@
     "daisyui": "^4.12.23",
     "express": "^4.21.2",
     "hammerjs": "^2.0.8",
-    "moment": "~2.30.1",
-    "ng-pick-datetime": "~7.0.0",
-    "ng2-charts": "8.0.0",
     "ng2-file-upload": "^8.0.0",
-    "reflect-metadata": "~0.2.2",
     "rxjs": "~7.8.2",
-    "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
-    "@types/chart.js": "2.9.41",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.2.0",
